--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,18 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
 [dependencies]
 rusb = "0.9.1"
 byteorder = {version = "1", features = ["i128"]}
 packed_struct = "0.10.0"
-iced = { version = "0.7", features = ["debug"] }
+iced = { version = "0.7", features = ["debug", "svg"] }
 iced_native = "0.8.0"
-iced_aw = {version = "0.3", default-features = false, features = ["tabs", "grid"] }
 iced_lazy = "0.4.0"
 image = "0.24.5"
+iced_aw = {  path = "../iced_aw" , features = [ "menu", "quad", "icon_text", "tabs", "grid"] }
+
+
 
 [build-dependencies]
 winresource = "0.1.14"
@@ -23,3 +26,4 @@ winresource = "0.1.14"
 [package.metadata.winresource]
 ProductName = "open_mc56f_usbdm"
 LegalCopyright = "GPL v2 © 2022"
+
