--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,15 @@ edition = "2021"
 
 
 [dependencies]
-rusb = "0.9.1"
 byteorder = {version = "1", features = ["i128"]}
+# Public
 packed_struct = "0.10.0"
 iced = { version = "0.7", features = ["debug", "svg"] }
 iced_native = "0.9.0"
-iced_lazy = "0.5.0"
 image = "0.24.5"
+
+[dependencies.rusb] 
+git = "https://github.com/a1ien/rusb"
 
 [dependencies.iced_aw] 
 git = "https://github.com/iced-rs/iced_aw"
