--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,10 @@ edition = "2021"
 byteorder = {version = "1", features = ["i128"]}
 # Public
 packed_struct = "0.10.0"
-iced = { version = "0.7", features = ["debug", "svg"] }
+iced = { version = "0.8", features = ["debug", "svg", "iced_wgpu", "iced_glow", "iced_glutin"] }
+iced_wgpu  = "0.9"
 iced_native = "0.9.0"
+iced_graphics = "0.7.0"
 image = "0.24.5"
 
 [dependencies.rusb] 
@@ -21,7 +23,7 @@ git = "https://github.com/a1ien/rusb"
 
 [dependencies.iced_aw] 
 git = "https://github.com/iced-rs/iced_aw"
-rev = "b66f93bcb27d4ea94c7e6d68ac4cf78535ebbabc" #latest commit as of 18.02.2023 v0.3.0
+rev = "406131b" #latest commit as of 18.02.2023 v0.3.0
 default-features = false 
 features = [ "menu", "quad", "icon_text", "tabs", "grid"]
 
