--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ git = "https://github.com/a1ien/rusb"
 git = "https://github.com/iced-rs/iced_aw"
 rev = "406131b" #latest commit as of 18.02.2023 v0.3.0
 default-features = false 
-features = [ "menu", "quad", "icon_text", "tabs", "grid"]
+features = [ "menu", "quad", "icon_text", "tabs", "grid", "card", "modal"]
 
 [build-dependencies]
 winresource = "0.1.14"
