--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2021"
 byteorder = {version = "1", features = ["i128"]}
 # Public
 packed_struct = "0.10.0"
-iced = { version = "0.8", features = ["debug", "svg", "iced_wgpu", "iced_glow", "iced_glutin"] }
+iced = { version = "0.8", features = ["debug", "svg", "iced_wgpu", "iced_glow", "iced_glutin", "image"] }
 iced_wgpu  = "0.9"
 iced_native = "0.9.0"
 iced_graphics = "0.7.0"
@@ -23,7 +23,7 @@ git = "https://github.com/a1ien/rusb"
 
 [dependencies.iced_aw] 
 git = "https://github.com/iced-rs/iced_aw"
-rev = "406131b" #latest commit as of 18.02.2023 v0.3.0
+rev = "f2b1bbb" #latest commit as of 18.02.2023 v0.3.0
 default-features = false 
 features = [ "menu", "quad", "icon_text", "tabs", "grid", "card", "modal"]
 
