1. file system load_download, binded with hex_buffer. Now only binary format. 2. error - parse std.io error by kind 3. target_factory first variant is addedd. Goal is create target one time, from yaml file 4. dsc_devices.xml - we will rewrite it to yaml, this from origin usbdm pjt 5. big cleanup main_menu + modify names etc. 6. TargetProgramming: - security check by SIM_ID - test_ram_rw added

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ iced_wgpu  = "0.9"
 iced_native = "0.9.0"
 iced_graphics = "0.7.0"
 image = "0.24.5"
+native-dialog = { git = "https://github.com/balthild/native-dialog-rs" }
 
 [dependencies.rusb] 
 git = "https://github.com/a1ien/rusb"
