--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ iced_native = "0.9.0"
 iced_graphics = "0.7.0"
 image = "0.24.5"
 native-dialog = { git = "https://github.com/balthild/native-dialog-rs" }
+async-trait ="0.1.64"
 
 [dependencies.rusb] 
 git = "https://github.com/a1ien/rusb"
