--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ edition = "2021"
 byteorder = {version = "1", features = ["i128"]}
 # Public
 packed_struct = "0.10.0"
-iced = { version = "0.8", features = ["debug", "svg", "glow", "iced_glutin", "image"] }
-iced_glow = "0.7.0"
+iced = { version = "0.8", features = ["debug", "svg", "iced_wgpu", "iced_glow", "iced_glutin", "image"] }
+iced_wgpu  = "0.9"
 iced_native = "0.9.0"
 iced_graphics = "0.7.0"
 image = "0.24.5"
@@ -32,6 +32,7 @@ features = ["menu", "quad", "icon_text", "tabs", "grid", "card", "modal"]
 
 [build-dependencies]
 winresource = "0.1.14"
+static_vcruntime = "2.0"
 
 [package.metadata.winresource]
 ProductName = "open_mc56f_usbdm"
