--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 
 [package]
 name = "veseliy_pjt_usb"
-build = "src/resources/build.rs"
+build = "src/build.rs"
 version = "0.1.0"
 edition = "2021"
 
