--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,16 +17,19 @@ iced_wgpu  = "0.9"
 iced_native = "0.9.0"
 iced_graphics = "0.7.0"
 image = "0.24.5"
-native-dialog = { git = "https://github.com/balthild/native-dialog-rs" }
 async-trait ="0.1.64"
+
+[dependencies.native-dialog]
+git = "https://github.com/balthild/native-dialog-rs"
+rev = "d2ddd44" #latest commit as of 08.03.2023 v0.6.3
 
 [dependencies.rusb] 
 git = "https://github.com/a1ien/rusb"
-rev = "df483fa" #latest commit as of 02.03.2023 v0.9.1
+rev = "df483fa" #latest commit as of 08.03.2023 v0.9.1
 
 [dependencies.iced_aw] 
 git = "https://github.com/iced-rs/iced_aw"
-rev = "e100ee0" #latest commit as of 02.03.2023 v0.4.1
+rev = "8fc1eed" #latest commit as of 08.03.2023 v0.4.1
 default-features = false 
 features = ["menu", "quad", "icon_text", "tabs", "grid", "card", "modal"]
 
