--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ iced_native = "0.9.0"
 iced_graphics = "0.7.0"
 image = "0.24.5"
 async-trait ="0.1.64"
-serde = "1.0"
+serde = { version = "1", features = ["derive"] }
 serde_yaml = "0.9"
 
 [dependencies.native-dialog]
