--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ image = "0.24.5"
 async-trait ="0.1.64"
 serde = { version = "1", features = ["derive"] }
 serde_yaml = "0.9"
+bincode = "1.3.3"
 
 [dependencies.native-dialog]
 git = "https://github.com/balthild/native-dialog-rs"
