--- a/src/dsc_target/targets.yaml
+++ b/src/dsc_target/targets.yaml
@@ -155,3 +155,28 @@ dsc:
        start: 0x0
        end: 0x7FFF
       access_type: MemoryP
+ - name:    Tester56f8035
+   family:  Mc56f803X
+   jtag_id_code : 0x01F2801D
+   core_id_code : 0x02211004
+   security_bytes : FFFFFFFFFFFF0000FFFFFFFFFFFFFFFFFFFF
+   connection_image_path : "../gui/resources/mcu_connection.jpeg"
+   memory_map:
+   - !Ram
+       name: null
+       range:
+        start: 0x8000
+        end:   0x8FFF
+       access_type: MemoryP
+   - !DataEeprom
+       name: null
+       range:
+        start: 0x0
+        end: 0x0FFF
+       access_type: MemoryX
+   - !FlashProgramm
+      name: null
+      range:
+       start: 0x0
+       end: 0x7F
+      access_type: MemoryP
